--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   </style>
 
   <body>
+    <audio autoplay="autoplay" loop="loop">
+        <source src="/resources/octopus-bg-music.wav" />     
+    </audio>
       <canvas id="canvas" width="800" height="600"></canvas>
       <%= htmlWebpackPlugin.tags.bodyTags %>
   </body>
