--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </style>
 
   <body>
-    <audio autoplay="autoplay" loop="loop">
+    <!-- <audio autoplay="autoplay" loop="loop">
         <source src="resources/octopus-bg-music.wav" />     
-    </audio>
+    </audio> -->
       <canvas id="canvas" width="800" height="600"></canvas>
       <%= htmlWebpackPlugin.tags.bodyTags %>
   </body>
